--- a/apps/manager/Kbuild
+++ b/apps/manager/Kbuild
@@ -9,5 +9,6 @@
 #
 
 
-components-$(CONFIG_APP_SIDE_BENCH)        += side-bench
-side-bench: common libsel4 libmuslc libcpio libsel4utils libsel4muslcsys libsel4allocman libsel4test libelf libplatsupport libsel4platsupport libsel4vspace
+components-$(CONFIG_APP_MANAGER)        += manager
+manager: common libsel4 libmuslc libcpio libsel4utils libsel4muslcsys libsel4allocman libsel4test libelf libplatsupport libsel4platsupport libsel4vspace
+
