--- a/apps/side-bench/Makefile
+++ b/apps/side-bench/Makefile
@@ -17,6 +17,7 @@ LDFLAGS += -u __vsyscall_ptr
 
 # Source files required to build the target     
 CFILES :=  $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
+CFILES :=  $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/aes/*.c))
 ASMFILES :=  $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.S))
 
 
