benchmarking cache flush

--- a/Kconfig
+++ b/Kconfig
@@ -37,6 +37,7 @@ menu "seL4 Libraries"
     source "libs/libsel4utils/Kconfig"
     source "libs/libsel4platsupport/Kconfig"
     source "libs/libsel4test/Kconfig"
+    source "libs/libsel4bench/Kconfig"
     source "libs/libsel4simple/Kconfig"
     source "libs/libsel4simple-default/Kconfig"
     source "libs/libsel4simple-stable/Kconfig"
