--- a/apps/manager/Kbuild
+++ b/apps/manager/Kbuild
@@ -14,7 +14,7 @@ manager-y = common libsel4 libmuslc libsel4vka libcpio libelf \
                                              libsel4allocman \
         libplatsupport libsel4platsupport libsel4muslcsys libsel4test \
          libsel4simple libsel4vspace libsel4utils libutils \
-         libsel4cachecolor
+         libsel4cachecolor libsel4bench
 
 # set up correct simple lib for our kernel
 ifdef CONFIG_KERNEL_STABLE                                                 
