--- a/apps/side-bench/Makefile
+++ b/apps/side-bench/Makefile
@@ -22,7 +22,7 @@ CFILES +=  $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 # Libraries
 LIBS = c sel4 cpio elf sel4muslcsys sel4vka sel4allocman \
 platsupport sel4platsupport sel4test sel4vspace \
-sel4utils sel4simple utils sel4cachecolor            
+sel4utils sel4simple utils sel4cachecolor sel4bench           
 
 #macros for openssl compile
 CFLAGS += -DOPENSSL_SYSNAME_LINUX
