--- a/apps/manager/Kconfig
+++ b/apps/manager/Kconfig
@@ -15,6 +15,14 @@ menu    "Manager task for benchmarking tests"
         depends on LIB_SEL4 && LIB_MUSL_C 
         help 
              Partitioning system resources and setting up isolated domains. 
+        
+        config MANAGER_IPC 
+        bool "ipc performance"
+        default n 
+        depends on APP_MANAGER 
+        help 
+             see timing channel benchmarks
+             
         config MANAGER_CACHE_FLUSH 
         bool "cost of flushing caches"
         default n 
