ipc works on sabre

--- a/apps/side-bench/Makefile
+++ b/apps/side-bench/Makefile
@@ -24,6 +24,12 @@ LIBS = c sel4 cpio elf sel4muslcsys sel4vka sel4allocman \
 platsupport sel4platsupport sel4test sel4vspace \
 sel4utils sel4simple utils sel4cachecolor sel4bench           
 
+ifdef CONFIG_KERNEL_STABLE 
+LIBS += sel4simple-stable 
+else 
+LIBS += sel4simple-default 
+endif 
+
 #macros for openssl compile
 CFLAGS += -DOPENSSL_SYSNAME_LINUX
 
