--- a/apps/manager/Kconfig
+++ b/apps/manager/Kconfig
@@ -51,13 +51,13 @@ menu    "Manager task for benchmarking tests"
         depends on APP_MANAGER 
         help 
             see timing channel benchmarks
-        
-        config MANAGER_COVERT_SINGLE
+  
+        config MANAGER_COVERT_SINGLE 
         bool "covert channel benchmark on single core" 
         default n 
         depends on APP_MANAGER 
         help  
-             a simple P+P attack on a cache set of LLC 
+             a simple P+P attack on single core 
 
 endmenu
 
