--- a/apps/side-bench/Kconfig
+++ b/apps/side-bench/Kconfig
@@ -105,7 +105,16 @@ menu   "Timing Channel Benchmarks"
        default n 
        depends on APP_SIDE_BENCH 
        help 
-             a simple P+P attack on single core, one cache set on LLC
+             a simple P+P attack on single core
+      choice 
+               prompt "cache level" 
+
+               config BENCH_COVERT_L2 
+               bool "L2"
+
+               config BENCH_COVERT_LLC 
+               bool "LLC"
+      endchoice 
 
 endmenu 
 
