--- a/apps/manager/Makefile
+++ b/apps/manager/Makefile
@@ -23,8 +23,8 @@ OFILES := archive.o
 
 # Libraries required to build the target                                   
 LIBS = c sel4 cpio elf sel4muslcsys sel4vka sel4allocman \
-platsupport sel4platsupport sel4test sel4vspace \
-sel4utils sel4simple utils sel4cachecolor sel4bench                       
+platsupport sel4platsupport sel4vspace \
+sel4utils sel4simple utils sel4cachecolour sel4bench                       
 
 
 ifdef CONFIG_KERNEL_STABLE 
