--- a/apps/side-bench/Kbuild
+++ b/apps/side-bench/Kbuild
@@ -11,7 +11,7 @@
 components-$(CONFIG_APP_SIDE_BENCH)        += side-bench
 side-bench: common libsel4 libmuslc libsel4vka libcpio libelf \
                                              libsel4allocman \
-        libplatsupport libsel4platsupport libsel4muslcsys libsel4test \
+        libplatsupport libsel4platsupport libsel4muslcsys \
          libsel4simple libsel4vspace libsel4utils libutils \
-         libsel4cachecolor libsel4bench libsel4simple-stable 
+          libsel4bench libsel4simple-stable 
 
