supporting L1 D &I, LLC cache channel through shared kernel

--- a/apps/manager/Kconfig
+++ b/apps/manager/Kconfig
@@ -52,19 +52,49 @@ menu    "Manager task for benchmarking tests"
         help 
             enable covert channel benchmarks 
 
+        config MANAGER_COVERT_MITIGATION 
+        bool "setting up system for mitigating timing channels" 
+        default n 
+        depends on MANAGER_COVERT_BENCH 
+        help  
+               setting up kernel objects, and endpointers for testing mitigation mechanisms. 
+
+        config COVERT_TROJAN_SENSITIVE 
+        bool "trojan sensitive" 
+        default n 
+        depends on MANAGER_COVERT_BENCH
+        help 
+            trojan is the high domain in normal benchmark scenario 
+            
+        config COVERT_TROJAN_HOLD_TIME 
+        int  "trojan holding time " 
+        default 3400000 
+        depends on COVERT_TROJAN_SENSITIVE 
+        help 
+            the domain execution time for trojan, in cpu cycles 
+
+
+        config COVERT_SPY_SENSITIVE 
+        bool "spy sensitive" 
+        default n 
+        depends on MANAGER_COVERT_BENCH
+        help 
+            spy is the low domain in normal benchmark scenario. the low domian should not contain the sensitive flag. 
+
+        config COVERT_SPY_HOLD_TIME 
+        int  "spy holding time " 
+        default 3400000 
+        depends on COVERT_SPY_SENSITIVE 
+        help 
+            the domain execution time for spy, in cpu cycles 
+
+   
         config MANAGER_DCACHE_ATTACK 
         bool "L1 dcache attack" 
         default n 
         depends on MANAGER_COVERT_BENCH  
         help 
             see timing channel benchmarks
-  
-        config MANAGER_COVERT_SINGLE 
-        bool "covert channel benchmark on single core" 
-        default n 
-        depends on MANAGER_COVERT_BENCH 
-        help  
-             a simple P+P attack on single core 
 
        config MANAGER_COVERT_MULTI
        bool "covert channel benchmark on multicore"
