random l3-kd bench l1d bench ready for channel analyses

--- a/apps/side-bench/Kconfig
+++ b/apps/side-bench/Kconfig
@@ -129,19 +129,12 @@ menu   "Timing Channel Benchmarks"
 
       endchoice
 
-      config BENCH_KERNEL_SCHEDULE_STEP
-      int "stepping for touching LLC by high domain"
-      default 4
-      depends on BENCH_COVERT_LLC_KERNEL_SCHEDULE 
+      config BENCH_DATA_POINTS
+      int "total number of random data points from high domain"
+      default 409600
+      depends on BENCH_COVERT_SINGLE 
       help
-            stepping size for sampling the effect of LLC activities on high
-
-      config BENCH_KERNEL_SCHEDULE_RUNS
-      int "number of runs for each data point in high domain"
-      default 100
-      depends on BENCH_COVERT_LLC_KERNEL_SCHEDULE  
-      help
-           number of data points collected per step, used by both high and low
+           number of data points collected, used by both high and low
 
       config MASTIK_ATTACK
       bool "multicore cache-based timing attack"
