branch target buffer probe

--- a/apps/side-bench/Kconfig
+++ b/apps/side-bench/Kconfig
@@ -140,6 +140,9 @@ menu   "Timing Channel Benchmarks"
 
                config BENCH_COVERT_TLB 
                bool "unified tlb"
+               
+               config BENCH_COVERT_BTB
+               bool "branch target buffer"
 
       endchoice
 
