--- a/apps/side-bench/Makefile
+++ b/apps/side-bench/Makefile
@@ -47,7 +47,7 @@ CFLAGS += -DDBG_MEMORY=0 -I $(SOURCE_DIR)/src/mastik/ -I $(SOURCE_DIR)/../
 # Libraries
 LIBS = c sel4 cpio elf sel4muslcsys sel4vka sel4allocman \
 platsupport sel4platsupport  sel4vspace \
-sel4utils sel4simple utils  sel4bench           
+ sel4utils sel4debug sel4simple utils  sel4bench           
 
 ifdef CONFIG_KERNEL_STABLE 
 LIBS += sel4simple-stable 
