--- a/apps/manager/Kbuild
+++ b/apps/manager/Kbuild
@@ -13,7 +13,7 @@ apps-$(CONFIG_APP_MANAGER)        += manager
 manager-y = common libsel4 libmuslc libsel4vka libcpio libelf \
                                              libsel4allocman \
         libplatsupport libsel4platsupport libsel4muslcsys  \
-         libsel4simple libsel4vspace libsel4utils libutils \
+         libsel4debug libsel4simple libsel4vspace libsel4utils libutils \
          libsel4cachecolour libsel4bench
 
 # set up correct simple lib for our kernel
@@ -22,6 +22,10 @@ manager-$(CONFIG_LIB_SEL4_SIMPLE_STABLE) += libsel4simple-stable
 else
 manager-$(CONFIG_LIB_SEL4_SIMPLE_DEFAULT) += libsel4simple-default 
 endif
+
+ifdef CONFIG_CACHE_COLOURING 
+manager-$(CONFIG_LIB_SEL4_CACHECOLOURING) += libsel4cachecolour  
+endif 
 
 # add the tests app  as a component so that we can elf load it
 manager-components-y += side-bench                             
