--- a/apps/side-bench/Kconfig
+++ b/apps/side-bench/Kconfig
@@ -144,6 +144,10 @@ menu   "Timing Channel Benchmarks"
                config BENCH_COVERT_BTB
                bool "branch target buffer"
 
+               config BENCH_COVERT_BP
+	            depends on CONFIG_ARCH_X86
+               bool "Branch prediction"
+
       endchoice
 
       config BENCH_DATA_POINTS
