--- a/apps/manager/Kconfig
+++ b/apps/manager/Kconfig
@@ -45,6 +45,13 @@ menu    "Manager task for benchmarking tests"
         help 
               not flushing cache during sel4_yeild
 
+        config MANAGER_FUNC_TESTS 
+        bool "functional correctness benchmark" 
+        default n 
+        depends on APP_MANAGER 
+        help  
+             testing the multikernel feature, including creation, kernel switch, deletion, multicore, etc. 
+
         config MANAGER_COVERT_BENCH 
         bool "covert channel benchmarks" 
         default n 
