--- a/apps/side-bench/Kconfig
+++ b/apps/side-bench/Kconfig
@@ -162,6 +162,13 @@ menu   "Timing Channel Benchmarks"
       depends on BENCH_COVERT_BTB 
       help  
              using 512 branch instructions, each 4 bytes, to probe the branch target buffer 
+      
+      config BENCH_COVERT_L1D_WRITE
+      bool   "L1D covert channel with writes"
+      default n
+      depends on BENCH_COVERT_L1D
+      help  
+             using writes for accessing the probing buffer in the L1D cache channel 
 
       config BENCH_DATA_SEQUENTIAL
       bool "sending the secret in sequential order"
