--- a/apps/manager/Makefile
+++ b/apps/manager/Makefile
@@ -39,7 +39,7 @@ endif
 
 
 # extra cflag for manager
-CFLAGS += -Werror -g -Wno-unused-function
+CFLAGS += -Werror -g -Wno-unused-function -I $(SOURCE_DIR)/../
 ifdef CONFIG_X86_64
 CFLAGS += -mno-sse
 endif
