timing benchmark based on timer interrupt

--- a/apps/side-bench/Kconfig
+++ b/apps/side-bench/Kconfig
@@ -139,6 +139,9 @@ menu   "Timing Channel Benchmarks"
 
                config BENCH_COVERT_BP
                bool "Branch prediction"
+               
+               config BENCH_COVERT_TIMER
+               bool "Timer interrupt (HIGH)"
 
       endchoice
 
